Z-index on bonus card check and fixing reset on landcounters

--- a/style.css
+++ b/style.css
@@ -425,6 +425,10 @@ input[type=number] {
   height:3%;
 }
 
+.checkable {
+  z-index: 3;
+}
+
 .checkable:hover {
   cursor: pointer;
 }
